split ParseGenerics from ParseParameterTypes, need to resolve issues